dockerfile fix cross compile and reduce size

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,22 @@
-Makefile
-cover.out
-README.md
-.github/
 .git/
+.github/
 .gitignore
-lakefs
-lakectl
-cmd/lakefs/lakefs
-cmd/lakectl/lakefs
-test/
+.idea
+Makefile
+README.md
 clients/
-docs/
+cmd/lakectl/lakefs
+cmd/lakefs/lakefs
+cover.out
 design/
+docs/
+esti/
+examples/
+lakectl
+lakefs
 pkg/gateway/testdata/
+target/
+test/
+venv/
+webui/node_modules/
+webui/src/
