--- a/.github/workflows/docker-publish-exp-image.yaml
+++ b/.github/workflows/docker-publish-exp-image.yaml
@@ -75,7 +75,7 @@ jobs:
           context: .
           target: ${{ inputs.target }}
           push: true
-          platforms: linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
+          platforms: linux/amd64,linux/arm64
           build-args: VERSION=${{ steps.version.outputs.tag }}
           tags: |
             treeverse/experimental-lakefs:${{ steps.version.outputs.tag }}
