--- a/.github/workflows/docker-publish-exp-image.yaml
+++ b/.github/workflows/docker-publish-exp-image.yaml
@@ -6,14 +6,11 @@ on:
         required: true
         description: The suffix of the published docker image.
       target:
-        default: 'lakefs-plugins'
+        default: 'lakefs'
         type: choice
         options:
-          - lakefs-plugins
           - lakefs
           - lakectl
-          - build-delta-diff-plugin
-          - build
 
 # These permissions are needed to interact with GitHub's OIDC Token endpoint.
 permissions:
@@ -61,12 +58,10 @@ jobs:
           GOLANGCI_LINT_FLAGS: --out-format github-actions
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          buildkitd-flags: --debug
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -80,7 +75,7 @@ jobs:
           context: .
           target: ${{ inputs.target }}
           push: true
-          platforms: linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
+          platforms: linux/amd64,linux/arm64
           build-args: VERSION=${{ steps.version.outputs.tag }}
           tags: |
             treeverse/experimental-lakefs:${{ steps.version.outputs.tag }}
