Separate group id displayname (#7292)
* Separate group IDs from DisplayNames

--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -235,6 +235,8 @@ components:
         - creation_date
         - name
       properties:
+        id:
+          type: string
         name:
           type: string
         creation_date:
