fix esti generated must upload for next workflow steps

--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -72,8 +72,8 @@ jobs:
           make -j3 gen-api gen-ui VERSION=${{ steps.version.outputs.tag }}
           tar -cf /tmp/generated.tar.gz ./webui/dist ./pkg/auth/client.gen.go ./pkg/permissions/actions.gen.go ./pkg/api/apigen/lakefs.gen.go
 
+        # must upload artifact in order to download generated later
       - name: Store generated code
-        if: steps.restore-cache.outputs.cache-hit != 'true'
         uses: actions/upload-artifact@v3
         with:
           name: generated-code
