--- a/esti/export_hooks_files/delta/azure/_lakefs_actions/delta_export.yaml
+++ b/esti/export_hooks_files/delta/azure/_lakefs_actions/delta_export.yaml
@@ -12,9 +12,12 @@ hooks:
         local delta_exporter = require("lakefs/catalogexport/delta_exporter")
         
         local table_descriptors_path = "_lakefs_tables"
-        local sc = azure.client(args.azure.storage_account, args.azure.access_key)
+        local sc = azure.blob_client(args.azure.storage_account, args.azure.access_key)
+        local function write_object(_, key, buf)
+          return sc.put_object(key,buf)
+        end
         local delta_client = formats.delta_client(args.lakefs.access_key_id, args.lakefs.secret_access_key)
-        local delta_table_locations = delta_exporter.export_delta_log(action, args.table_names, sc.put_object, delta_client, table_descriptors_path)
+        local delta_table_locations = delta_exporter.export_delta_log(action, args.table_names, write_object, delta_client, table_descriptors_path)
 
         for t, loc in pairs(delta_table_locations) do
           print("Delta Lake exported table \"" .. t .. "\"'s location: " .. loc .. "\n")
