--- a/clients/hadoopfs/pom.xml
+++ b/clients/hadoopfs/pom.xml
@@ -20,7 +20,7 @@ To export to S3:
     <artifactId>hadoop-lakefs${name-suffix}</artifactId>
     <packaging>jar</packaging>
     <name>hadoop-lakefs${name-suffix}</name>
-    <version>0.1.0</version><!--MARKER: keep this comment here, we update the version with the lakeFS version when on deploy-->
+    <version>0.2.3-RC.0</version><!--MARKER: keep this comment here, we update the version with the lakeFS version when on deploy-->
     <url>https://lakefs.io</url>
     <scm>
         <connection>scm:git:git@github.com:treeverse/lakeFS.git</connection>
