fix tests and examples

--- a/esti/export_hooks_files/delta/s3/_lakefs_actions/delta_export.yaml
+++ b/esti/export_hooks_files/delta/s3/_lakefs_actions/delta_export.yaml
@@ -14,10 +14,10 @@ hooks:
         local table_descriptors_path = "_lakefs_tables"
         local sc = aws.s3_client(args.aws.access_key_id, args.aws.secret_access_key, args.aws.region)
         local delta_client = formats.delta_client(args.lakefs.access_key_id, args.lakefs.secret_access_key, args.aws.region)
-        local delta_table_locations = delta_exporter.export_delta_log(action, args.table_names, sc.put_object, delta_client, table_descriptors_path)
+        local delta_table_details = delta_exporter.export_delta_log(action, args.table_names, sc.put_object, delta_client, table_descriptors_path)
 
-        for t, loc in pairs(delta_table_locations) do
-          print("Delta Lake exported table \"" .. t .. "\"'s location: " .. loc .. "\n")
+        for t, details in pairs(delta_table_details) do
+          print("Delta Lake exported table \"" .. t .. "\"'s location: " .. details["path"] .. "\n")
         end
       args:
         aws:
