--- a/esti/export_hooks_files/delta/azure/_lakefs_actions/delta_export.yaml
+++ b/esti/export_hooks_files/delta/azure/_lakefs_actions/delta_export.yaml
@@ -17,10 +17,10 @@ hooks:
           return sc.put_object(key,buf)
         end
         local delta_client = formats.delta_client(args.lakefs.access_key_id, args.lakefs.secret_access_key)
-        local delta_table_locations = delta_exporter.export_delta_log(action, args.table_names, write_object, delta_client, table_descriptors_path)
+        local delta_table_details = delta_exporter.export_delta_log(action, args.table_names, write_object, delta_client, table_descriptors_path)
 
-        for t, loc in pairs(delta_table_locations) do
-          print("Delta Lake exported table \"" .. t .. "\"'s location: " .. loc .. "\n")
+        for t, details in pairs(delta_table_details) do
+          print("Delta Lake exported table \"" .. t .. "\"'s location: " .. details["path"] .. "\n")
         end
       args:
         azure:
