--- a/esti/export_hooks_files/delta/s3/_lakefs_actions/delta_export.yaml
+++ b/esti/export_hooks_files/delta/s3/_lakefs_actions/delta_export.yaml
@@ -10,6 +10,7 @@ hooks:
         local aws = require("aws")
         local formats = require("formats")
         local delta_exporter = require("lakefs/catalogexport/delta_exporter")
+        local json = require("encoding/json")
         
         local table_descriptors_path = "_lakefs_tables"
         local sc = aws.s3_client(args.aws.access_key_id, args.aws.secret_access_key, args.aws.region)
@@ -26,7 +27,11 @@ hooks:
           end
           print("Delta Lake exported table \"" .. t .. "\"'s metadata:\n")
           for k, v in pairs(details["metadata"]) do
-            print("\t" .. k .. " = " .. v .. "\n")
+            if type(v) ~= "table" then
+              print("\t" .. k .. " = " .. v .. "\n")
+            else 
+              print("\t" .. k .. " = " .. json.marshal(v) .. "\n")
+            end
           end
         end
       args:
