--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -340,6 +340,30 @@ components:
           format: int64
           description: Unix Epoch in seconds
 
+    ExternalPrincipal:
+      type: object
+      required:
+        - user_id
+        - id
+      properties:
+        user_id:
+          type: string
+        id:
+          type: string
+
+    ExternalPrincipalList:
+      type: object
+      required:
+        - pagination
+        - results
+      properties:
+        pagination:
+          $ref: "#/components/schemas/Pagination"
+        results:
+          type: array
+          items:
+            type: string
+
 paths:
   /auth/users:
     get:
@@ -983,6 +1007,37 @@ paths:
         default:
           $ref: "#/components/responses/ServerError"
 
+  /auth/users/{userId}/external/principals:
+    parameters:
+      - in: path
+        name: userId
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - auth
+        - experimental
+      parameters:
+        - $ref: "#/components/parameters/PaginationPrefix"
+        - $ref: "#/components/parameters/PaginationAfter"
+        - $ref: "#/components/parameters/PaginationAmount"
+      operationId: listUserExternalPrincipals
+      summary: list external principals for user
+      responses:
+        200:
+          description: external principals
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ExternalPrincipalList"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        404:
+          $ref: "#/components/responses/NotFound"
+        default:
+          $ref: "#/components/responses/ServerError"
+
   /auth/groups/{groupId}/policies:
     parameters:
       - in: path
@@ -1079,6 +1134,95 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         default:
           $ref: "#/components/responses/ServerError"
+
+  /auth/external/principals:
+    get:
+      tags:
+        - auth
+        - experimental
+      operationId: listExternalPrincipals
+      summary: list external principals
+      parameters:
+        - $ref: "#/components/parameters/PaginationPrefix"
+        - $ref: "#/components/parameters/PaginationAfter"
+        - $ref: "#/components/parameters/PaginationAmount"
+      responses:
+        200:
+          description: external principal list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ExternalPrincipalList"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        420:
+          description: too many requests
+        default:
+          $ref: "#/components/responses/ServerError"
+    post:
+      tags:
+        - auth
+      operationId: createExternalPrincipal
+      summary: Create principal as external identity connected to lakeFS user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ExternalPrincipal"
+      responses:
+        201:
+          description: external principal created successfully
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        409:
+          $ref: "#/components/responses/Conflict"
+        420:
+          description: too many requests
+        default:
+          $ref: "#/components/responses/ServerError"
+
+  /auth/external/principals/{principalId}:
+    parameters:
+      - in: path
+        name: principalId
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - auth
+        - experimental
+      operationId: getExternalPrincipal
+      summary: get external principal
+      responses:
+        200:
+          description: external principal
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ExternalPrincipal"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        404:
+          $ref: "#/components/responses/NotFound"
+        default:
+          $ref: "#/components/responses/ServerError"
+    delete:
+        tags:
+            - auth
+            - experimental
+        operationId: deleteExternalPrincipalFromUser
+        summary: delete external principal from user's external principal list
+        responses:
+            204:
+              description: external principal deleted
+            401:
+              $ref: "#/components/responses/Unauthorized"
+            404:
+              $ref: "#/components/responses/NotFound"
+            default:
+              $ref: "#/components/responses/ServerError"
 
   /healthcheck:
     get:
