--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -363,6 +363,15 @@ components:
           items:
             $ref: "#/components/schemas/ExternalPrincipal"
 
+    ExternalLoginInformation:
+      type: object
+      required:
+        - presigned_url
+      properties:
+        presigned_url:
+          type: string
+
+
 paths:
   /auth/users:
     get:
@@ -1102,6 +1111,7 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         default:
           $ref: "#/components/responses/ServerError"
+
   /auth/users/{userId}/external/principals/ls:
       parameters:
         - in: path
@@ -1112,6 +1122,7 @@ paths:
       get:
         tags:
           - auth
+          - external
           - experimental
         parameters:
           - $ref: "#/components/parameters/PaginationPrefix"
@@ -1148,6 +1159,7 @@ paths:
     post:
       tags:
         - auth
+        - external
         - experimental
       operationId: createUserExternalPrincipal
       summary: Create principal as external identity connected to lakeFS user
@@ -1164,8 +1176,9 @@ paths:
           $ref: "#/components/responses/ServerError"
     delete:
         tags:
-            - auth
-            - experimental
+          - auth
+          - external
+          - experimental
         operationId: deleteUserExternalPrincipal
         summary: delete external principal from user's external principal list
         responses:
@@ -1207,6 +1220,38 @@ paths:
           description: too many requests
         default:
           $ref: "#/components/responses/ServerError"          
+
+  /auth/external/login:
+    post:
+      tags:
+        - auth
+        - external
+        - experimental
+      operationId: externalLogin
+      summary: perform a login using an external authenticator
+      security: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ExternalLoginInformation"
+      responses:
+        200:
+          description: successful login
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        420:
+          description: too many requests
+        default:
+          $ref: "#/components/responses/ServerError"
 
   /healthcheck:
     get:
