--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -11,6 +11,7 @@ servers:
 
 security:
   - jwt_token: []
+  - external_auth: []
 
 components:
   securitySchemes:
@@ -18,6 +19,9 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
+    external_auth:
+      type: http
+      scheme: basic
       
   parameters:
     PaginationPrefix:
