--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -1238,6 +1238,10 @@ paths:
       responses:
         200:
           description: successful login
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
           content:
             application/json:
               schema:
