Restore cache check

--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -67,6 +67,7 @@ jobs:
           cache-dependency-path: webui/package-lock.json
 
       - name: Generate code
+        if: steps.restore-cache.outputs.cache-hit != 'true'
         run: |
           make -j3 gen-api gen-ui VERSION=${{ steps.version.outputs.tag }}
           tar -cf /tmp/generated.tar.gz ./webui/dist ./pkg/auth/client.gen.go ./pkg/authentication/apiclient/client.gen.go ./pkg/permissions/actions.gen.go ./pkg/api/apigen/lakefs.gen.go
