friendly_name required

--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -515,6 +515,8 @@ paths:
         content:
           application/json:
             schema:
+              required:
+                - friendly_name
               type: object
               properties:
                 friendly_name:
