--- a/api/authentication.yml
+++ b/api/authentication.yml
@@ -280,8 +280,8 @@ components:
         external_user_identifier:
           type: string
           description: external_user_identifier is the user DN in LDAP set if user exists with that username and has this password.
-    ExternalLoginInformation:
-      type: object
+    IdentityToken:
+      type: string
     StsAuthRequest:
       type: object
       required:
@@ -351,7 +351,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ExternalLoginInformation"
+              $ref: "#/components/schemas/IdentityToken"
       responses:
         200:
           description: successful external login
